samples/_failures_safe/1761550879_20f1bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49b3d85e.c: In function ‘main’:
./samples/SAFE/__tmp_49b3d85e.c:161:9: error: expected declaration or statement at end of input
  161 |         printf("Invalid starting vertex\n");
      |         ^~~~~~
./samples/SAFE/__tmp_49b3d85e.c:161:9: error: expected declaration or statement at end of input
